--- a/index.html
+++ b/index.html
@@ -9,18 +9,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   </head>
 
-  <body>
+  <body style="background-image: url(gallery/blue-1.png);">
     <header class="header">
-      <img id="sidebr" class="sidebar-open" width="30px">
-      <img class="text-logo" src="ico/logo/logo-name.svg" width="150px">
-      <img class="search-btn" src="ico/search.svg" width="30px">
+      <img id="sidebr" class="sidebar-open">
+      <img class="header-icons" src="ico/light-mode/logoonly-blue.svg">
+      <img class="header-icons" src="ico/light-mode/gct-blue.png">
+      <h3 class="school-name">GARCIA COLLEGE OF TECHNOLOGY</h3>
+      <img class="search-btn" src="ico/light-mode/search-blue.svg">
       </div>
     </header>
     <div class="header-placeholder"></div> <!--placeholder space below header to prevent clipping of contents with main page-->
+    
+    <div class="main-title"><!--big-ass title-->
+      <img src="ico/light-mode/maintitle-blue.svg">
+    </div>
+    
     <div class="main-page">
       <div class="section">
         <a class="viewcard" href="p-enrollment/page.html">
-          <img class="card-image" src="gallery/viewcards/enrollment.jpg">
+          <img class="card-image" src="ico/cardview-icons/enrollment.svg">
           <div class="card-name">
             <h4>Enrollment</h4>
           </div>
@@ -28,7 +35,7 @@
       </div>
       <div class="section">
         <a class="viewcard" href="p-clearance/page.html">
-          <img class="card-image" src="gallery/viewcards/clearance.jpg">
+          <img class="card-image" src="ico/cardview-icons/clearance.svg">
           <div class="card-name">
             <h4>Clearance</h4>
           </div>
@@ -36,7 +43,7 @@
       </div>
       <div class="section">
         <a class="viewcard" href="p-exam-permit/page.html">
-          <img class="card-image" src="gallery/viewcards/exampermit.jpg">
+          <img class="card-image" src="ico/cardview-icons/exampermit.svg">
           <div class="card-name">
             <h4>Exam Permit</h4>
           </div>
@@ -44,7 +51,7 @@
       </div>
       <div class="section">
         <a class="viewcard" href="p-transcript-of-records/page.html">
-          <img class="card-image" src="gallery/viewcards/tor.jpg">
+          <img class="card-image" src="ico/cardview-icons/tor.svg">
           <div class="card-name">
             <h4>Transcript of Records</h4>
           </div>
@@ -52,7 +59,7 @@
       </div>
       <div class="section">
         <a class="viewcard" href="p-renewal-id/page.html">
-          <img class="card-image" src="gallery/viewcards/idrenewal.jpg">
+          <img class="card-image" src="ico/cardview-icons/idrenewal.svg">
           <div class="card-name">
             <h4>I.D. Renewal</h4>
           </div>
@@ -60,7 +67,7 @@
       </div>
       <div class="section">
         <a class="viewcard" href="p-excuse-letter/page.html">
-          <img class="card-image" src="gallery/viewcards/excuseletter.jpg">
+          <img class="card-image" src="ico/cardview-icons/excuseletter.svg">
           <div class="card-name">
             <h4>Excuse Letter</h4>
           </div>
@@ -72,7 +79,7 @@
     <div class="mobile-sidebar">
       <ul class="nav-list">
         <li class="list-header"><p>DOCUMENTS</p>
-          <ul class="list-name">
+          <ul class="list-name doclist">
             <li><a href="glossary.html#doc-1">Affidavit of Loss</a></li>
             <li><a href="glossary.html#doc-2">Birth Certificate</a></li>
             <li><a href="glossary.html#doc-3">Blue Form (Student's Copy)</a></li>
@@ -91,7 +98,7 @@
           </ul>
         </li>
         <li class="list-header"><p>LOCATION</p>
-          <ul class="list-name">
+          <ul class="list-name loclist">
             <li><a href="glossary.html#loc-1">Assessor's Office</a></li>
             <li><a href="glossary.html#loc-2">Building A</a></li>
             <li><a href="glossary.html#loc-3">Building B</a></li>
@@ -115,7 +122,7 @@
     <div class="desktop-sidebar">
       <ul class="nav-list">
         <li class="list-header"><p>DOCUMENTS<p>
-          <ul class="list-name">
+          <ul class="list-name doclist">
             <li><a href="glossary.html#doc-1">Affidavit of Loss</a></li>
             <li><a href="glossary.html#doc-2">Birth Certificate</a></li>
             <li><a href="glossary.html#doc-3">Blue Form (Student's Copy)</a></li>
@@ -134,7 +141,7 @@
           </ul>
         </li>
         <li class="list-header"><p>LOCATION</p>
-          <ul class="list-name">
+          <ul class="list-name loclist">
             <li><a href="glossary.html#loc-1">Assessor's Office</a></li>
             <li><a href="glossary.html#loc-2">Building A</a></li>
             <li><a href="glossary.html#loc-3">Building B</a></li>
