added dark mode toggle

--- a/p-excuse-letter/page.html
+++ b/p-excuse-letter/page.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="../page.css">
     <link rel="stylesheet" href="../content.css">
+    <link rel="stylesheet" href="../darkmode.css">
     <script src="load.js"></script>
   </head>
 
@@ -104,6 +105,6 @@
       </div>
     </div>
 
-    <script src="../script.js" defer></script>
+    <script src="../script.js"></script>
     <script src="../processpage.js" defer></script>
   </body>
