--- a/p-clearance/page.html
+++ b/p-clearance/page.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="../page.css">
     <link rel="stylesheet" href="../content.css">
+    <link rel="stylesheet" href="../darkmode.css">
     <script src="load.js"></script>
   </head>
 
@@ -228,6 +229,6 @@
       </div>
     </div>
 
-    <script src="../script.js" defer></script>
+    <script src="../script.js"></script>
     <script src="../processpage.js" defer></script>
   </body>
