fixed mobile darkmode

--- a/p-excuse-letter/page.html
+++ b/p-excuse-letter/page.html
@@ -13,7 +13,7 @@
 
   <body>
     <header class="process-header">
-      <a class="back-home" href="../index.html"><img src="../ico/arrow-back.svg" alt="-"> <h3>Excuse Letter</h3> </a>
+      <a class="back-home" href="../index.html"><img> <h3>Excuse Letter</h3> </a>
       <div class="process-title">
         <h1>EXCUSE LETTER</h1>
       </div>
