--- a/p-enrollment/page.html
+++ b/p-enrollment/page.html
@@ -13,7 +13,7 @@
 
   <body>
     <header class="process-header" >
-      <a class="back-home" href="../index.html"><img src="../ico/arrow-back.svg" alt="-"> <h3>Enrollment</h3> </a>
+      <a class="back-home" href="../index.html"><img> <h3>Enrollment</h3> </a>
       <div class="process-title">
         <h1>ENROLLMENT</h1>
       </div>
