used filter for theme switching

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </label>
       </div>
       <ul class="nav-list">
-        <li class="list-header"><p>DOCUMENTS</p>
+        <li class="list-header"><h4>Documents</h4>
           <ul class="list-name doclist">
             <li><a href="glossary.html#doc-1">Affidavit of Loss</a></li>
             <li><a href="glossary.html#doc-2">Birth Certificate</a></li>
@@ -100,7 +100,7 @@
             <li><a href="glossary.html#doc-15">Transcript of Records</a></li>
           </ul>
         </li>
-        <li class="list-header"><p>LOCATION</p>
+        <li class="list-header"><h4>Location</h4>
           <ul class="list-name loclist">
             <li><a href="glossary.html#loc-1">Assessor's Office</a></li>
             <li><a href="glossary.html#loc-2">Building A</a></li>
@@ -129,7 +129,7 @@
     </div>
     <div class="desktop-sidebar">
       <ul class="nav-list">
-        <li class="list-header"><p>DOCUMENTS<p>
+        <li class="list-header"><h4>Documents</h4>
           <ul class="list-name doclist">
             <li><a href="glossary.html#doc-1">Affidavit of Loss</a></li>
             <li><a href="glossary.html#doc-2">Birth Certificate</a></li>
@@ -148,7 +148,7 @@
             <li><a href="glossary.html#doc-15">Transcript of Records</a></li>
           </ul>
         </li>
-        <li class="list-header"><p>LOCATION</p>
+        <li class="list-header"><h4>Location</h4>
           <ul class="list-name loclist">
             <li><a href="glossary.html#loc-1">Assessor's Office</a></li>
             <li><a href="glossary.html#loc-2">Building A</a></li>
