added sidebar list ui

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         </label>
       </div>
       <ul class="nav-list">
-        <li class="list-header"><h4>Documents</h4>
-          <ul class="list-name doclist">
+        <li class="list-header doclist"><h4>Forms</h4>
+          <ul class="list-name">
             <li><a href="glossary.html#doc-1">Affidavit of Loss</a></li>
             <li><a href="glossary.html#doc-2">Birth Certificate</a></li>
             <li><a href="glossary.html#doc-3">Blue Form (Student's Copy)</a></li>
@@ -100,8 +100,8 @@
             <li><a href="glossary.html#doc-15">Transcript of Records</a></li>
           </ul>
         </li>
-        <li class="list-header"><h4>Location</h4>
-          <ul class="list-name loclist">
+        <li class="list-header loclist"><h4>Buildings and Offices</h4>
+          <ul class="list-name">
             <li><a href="glossary.html#loc-1">Assessor's Office</a></li>
             <li><a href="glossary.html#loc-2">Building A</a></li>
             <li><a href="glossary.html#loc-3">Building B</a></li>
@@ -129,8 +129,8 @@
     </div>
     <div class="desktop-sidebar">
       <ul class="nav-list">
-        <li class="list-header"><h4>Documents</h4>
-          <ul class="list-name doclist">
+        <li class="list-header doclist"><h4>Forms</h4>
+          <ul class="list-name">
             <li><a href="glossary.html#doc-1">Affidavit of Loss</a></li>
             <li><a href="glossary.html#doc-2">Birth Certificate</a></li>
             <li><a href="glossary.html#doc-3">Blue Form (Student's Copy)</a></li>
@@ -148,8 +148,8 @@
             <li><a href="glossary.html#doc-15">Transcript of Records</a></li>
           </ul>
         </li>
-        <li class="list-header"><h4>Location</h4>
-          <ul class="list-name loclist">
+        <li class="list-header loclist"><h4>Buildings and Offices</h4>
+          <ul class="list-name">
             <li><a href="glossary.html#loc-1">Assessor's Office</a></li>
             <li><a href="glossary.html#loc-2">Building A</a></li>
             <li><a href="glossary.html#loc-3">Building B</a></li>
