added hyperlinks to process steps

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
     <header class="header">
       <img id="sidebr" class="sidebar-open">
-      <img class="header-icons applogo">
-      <img class="header-icons gctlogo">
+      <i class="header-icons applogo"></i>
+      <i class="header-icons gctlogo"></i>
       <h3 class="school-name">GARCIA COLLEGE OF TECHNOLOGY</h3>
-      <img class="search-btn">
+      <i class="search-btn"></i>
       </div>
     </header>
     <div class="header-placeholder"></div> <!--placeholder space below header to prevent clipping of contents with main page-->
