--- a/p-clearance/content.html
+++ b/p-clearance/content.html
@@ -15,15 +15,15 @@
 <!--Content Section-->
 <div id="content-1" class="content">
   <h5>What To Do:</h5>
-  <p>Fill out necessary information in the Certificate of Clearance and Final Grade Form.</p>
+  <p>Fill out necessary information in the Certificate of <a href="../glossary.html#doc-4" target="_blank">Clearance <i class="elink"></i></a> and <a href="../glossary.html#doc-8" target="_blank">Final Grade Form <i class="elink"></i></a>.</p>
 </div>
 <div id="content-2" class="content">
   <h5>What To Do:</h5>
-  <p>Get your Final Grades at the designated Window of your course at the Registrar.</p>
+  <p>Get your Final Grades at the designated Window of your course at the <a href="../glossary.html#loc-11" target="_blank">Registrar <i class="elink"></i></a>.</p>
   <h5>Where To Go:</h5>
-  <p>1st Floor, Building D</p>
+  <p>1st Floor, <a href="../glossary.html#loc-5" target="_blank">Building D <i class="elink"></i></a></p>
   <h5>What You'll Need</h5>
-  <p>Blue Form (Student's Copy of Enrollment)</p>
+  <p><a href="../glossary.html#doc-3" target="_blank">Blue Form (Student's Copy of Enrollment) <i class="elink"></i></a></p>
 </div>
 <div id="content-3" class="content">
   <h5>What To Do:</h5>
@@ -35,15 +35,15 @@
 </div>
 <div id="content-5" class="content">
   <h5>What To Do:</h5>
-  <p>Settle any penalties at the SSC Office.</p>
+  <p>Settle any penalties at the <a href="../glossary.html#loc-13" target="_blank">SSC Office <i class="elink"></i></a>.</p>
   <h5>Where To Go:</h5>
-  <p>1st Floor, Building B</p>
+  <p>1st Floor, <a href="../glossary.html#loc-3" target="_blank">Building B <i class="elink"></i></a></p>
   <h5>What You'll Need:</h5>
   <p>Blue Form (Student's Copy of Enrollment)</p>
 </div>
 <div id="content-6" class="content">
   <h5>Where To Go:</h5>
-  <p>2nd Floor, Building A</p>
+  <p>2nd Floor, <a href="../glossary.html#loc-2" target="_blank">Building A <i class="elink"></i></a></p>
   <h5>What You'll Need</h5>
   <p>Blue Form (Student's Copy of Enrollment)</p>
 </div>
@@ -51,9 +51,9 @@
   <h5>What To Do:</h5>
   <p>Surrender your library card at the Library.</p>
   <h5>Where To Go:</h5>
-  <p>4th Floor, Building C</p>
+  <p>4th Floor, <a href="../glossary.html#loc-4" target="_blank">Building C <i class="elink"></i></a></p>
   <h5>What You'll Need</h5>
-  <p>Library Card</p>
+  <p><a href="../glossary.html#doc-11" target="_blank">Library Card <i class="elink"></i></a></p>
 </div>
 <div id="content-8" class="content">
   <h5>What To Do:</h5>
@@ -87,7 +87,7 @@
   <h5>What You'll Need:</h5>
   <ul>
     <li>Blue Form (Student's Copy of Enrollment)</li>
-    <li>School ID</li>
+    <li><a href="../glossary.html#doc-12" target="_blank">School ID <i class="elink"></i></a></li>
     <li>Must be in the prescribed College uniform.</li>
   </ul>
 </div>
