--- a/p-exam-permit/content.html
+++ b/p-exam-permit/content.html
@@ -6,21 +6,21 @@
 <!--Content Section-->
 <div id="content-1" class="content">
   <h5>What To Do:</h5>
-  <p>Get an assessment of payment at the Assessor's Office.</p>
+  <p>Get an assessment of payment at the <a href="../glossary.html#loc-1" target="_blank">Assessor's Office <i class="elink"></i></a>.</p>
   <h5>Where To Go:</h5>
-  <p>1st Floor, Building B</p>
+  <p>1st Floor, <a href="../glossary.html#loc-3" target="_blank">Building B <i class="elink"></i></a></p>
   <h5>What You'll Need:</h5>
-  <p>Blue Form (Student's Copy of Enrollment)</p>
+  <p><a href="../glossary.html#doc-3" target="_blank">Blue Form (Student's Copy of Enrollment) <i class="elink"></i></a></p>
 </div>
 <div id="content-2" class="contesnt">
   <h5>What To Do:</h5>
   <p>Pay the required amount as stated in the Assessment.</p>
   <h5>Where To Go:</h5>
-  <p>1st Floor, Building D</p>
+  <p>1st Floor, <a href="../glossary.html#loc-5" target="_blank">Building D <i class="elink"></i></a></p>
 </div>
 <div id="content-3" class="content">
   <h5>What To Do:</h5>
-  <p>After paying, you can now get your Examination Permit at the next window at the Treasurer's Office.</p>
+  <p>After paying, you can now get your Examination Permit at the next window at the <a href="../glossary.html#loc-14" target="_blank">Treasurer's Office <i class="elink"></i></a>.</p>
   <h5>Where To Go:</h5>
   <p>1st Floor, Building D</p>
 </div>
