--- a/p-excuse-letter/page.html
+++ b/p-excuse-letter/page.html
@@ -22,7 +22,7 @@
     <div class="main-page">
       <div class="procedure">
         <h3>Procedure</h3>
-        <ul><h5>Note:</h5>
+        <ul class="pre-note"><h5>Note:</h5>
           <li><p>
             The student must secure an excuse slip within one week from the time the student
                reported to school after the absence(s); otherwise, the student will lose the privilege to be excused.
