--- a/p-renewal-id/content.html
+++ b/p-renewal-id/content.html
@@ -5,17 +5,17 @@
 <!--Content Section-->
 <div id="content-1" class="content">
   <h5>What To Do:</h5>
-  <p>Seek aid for an attorney for the application of your Affidavit of Loss of your ID.</p>
+  <p>Seek aid for an attorney for the application of your <a href="../glossary.html#doc-1" target="_blank">Affidavit of Loss <i class="elink"></i></a> of your ID.</p>
 
 </div>
 <div id="content-2" class="content">
   <h5>What To Do:</h5>
   <p>After securing an Affidavit of Loss, inform Engr. Ronald Tan so he can accommodate you on your renewal of School ID.</p>
   <h5>Where To Go:</h5>
-  <p>3rd Floor, Building B</p>
+  <p>3rd Floor, <a href="../glossary.html#loc-3" target="_blank">Building B <i class="elink"></i></a></p>
   <h5>What You'll Need:</h5>
   <ul>
-    <li>Blue Form (Student's Copy of Enrollment)</li>
+    <li><a href="../glossary.html#doc-3" target="_blank">Blue Form (Student's Copy of Enrollment) <i class="elink"></i></a></li>
     <li>Affidavit of Loss</li>
     <li>Php 15.00</li>
   </ul>
