added search filter and confirm dialog

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
   <body>
     <header class="header">
       <img id="sidebr" class="sidebar-open">
-      <i class="header-icons applogo"></i>
+      <i class="applogo"></i>
+      <i class="applogo-d"></i>
       <h3 class="school-name">GARCIA COLLEGE OF TECHNOLOGY</h3>
-      <i class="search-btn"></i>
-      </div>
     </header>
     <div class="header-placeholder"></div> <!--placeholder space below header to prevent clipping of contents with main page-->
     <div class="main-title sbc"><!--big-ass title-->
@@ -80,6 +79,9 @@
           <input type="checkbox" class="toggledark-btn tgm"><span class="slider"></span>
         </label>
       </div>
+      <div class="search">
+        <input class="search-bar" type="text" placeholder="Filter...">
+      </div>
       <ul class="nav-list">
         <li class="list-header doclist"><h4>Forms</h4>
           <ul class="list-name">
@@ -119,13 +121,15 @@
           </ul>
         </li>
       </ul>
-      <div class="sidebar-footer"></div>
     </div>
     <div class="toggledesktop">
       <span><h4>Dark Theme</h4></span>
       <label class="toggle">
         <input type="checkbox" class="toggledark-btn tgd"><span class="slider"></span>
       </label>
+    </div>
+    <div class="search-desktop">
+      <input class="search-bar" type="text" placeholder="Filter...">
     </div>
     <div class="desktop-sidebar">
       <ul class="nav-list">
@@ -136,8 +140,8 @@
             <li><a href="glossary.html#doc-3">Blue Form (Student's Copy)</a></li>
             <li><a href="glossary.html#doc-4">Clearance</a></li>
             <li><a href="glossary.html#doc-5">Enrollment Form</a></li>
-            <li><a href="glossary.html#doc-6">Excuse Slip</a></li>  
-            <li><a href="glossary.html#doc-7">Examination Permit</a></li>
+            <li><a href="glossary.html#doc-6">Examination Permit</a></li>  
+            <li><a href="glossary.html#doc-7">Excuse Slip</a></li>
             <li><a href="glossary.html#doc-8">Final Grades Form</a></li>
             <li><a href="glossary.html#doc-9">Good Moral Character</a></li>
             <li><a href="glossary.html#doc-10">Honorable Dismissal</a></li>
