added two categories in school ID processing

--- a/enrollment/index.html
+++ b/enrollment/index.html
@@ -187,24 +187,7 @@
             </div>
             <div class="nav-button">
               <button class="back-button" type="button">Back</button>
-              <button class="next-button" type="button">Next</button>
-            </div>
-          </div>
-        </div>
-<!----------------------step 11----------------------------------------->
-        <div class="container">
-          <!--------------title-------------------->
-          <div class="accordion-header"> 
-            <div class="accordion-label"><h4 id="head-11"></h4></div> 
-          </div>
-          <!--------------content-------------------->
-          <div class="accordion-panel"> 
-            <div id="content-11" class="content">
-              
-            </div>
-            <div class="nav-button">
-              <button class="back-button" type="button">Back</button>
-              <button class="finish-button" type="button">Finish</button>
+              <button class="finish-button" type="button">Next</button>
             </div>
           </div>
         </div>
