--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a class="viewcard" href="renewal-id/">
           <img class="card-image" src="assets/ico/cardview-icons/idrenewal.svg">
           <div class="card-name">
-            <h4>I.D. Renewal</h4>
+            <h4>School I.D.</h4>
           </div>
         </a>
       </div>
