--- a/renewal-id/content.html
+++ b/renewal-id/content.html
@@ -1,14 +1,25 @@
 <!--Heading Section-->
-<h4 id="head-1">Apply for an Affidavit of Loss</h4>
-<h4 id="head-2">Internet Laboratory</h4>
+<h4 id="head-1">Internet Laboratory</h4>
+<h4 id="head-2">Apply for an Affidavit of Loss</h4>
+<h4 id="head-3">Internet Laboratory</h4>
 
-<!--Content Section-->
+<!--Content Section--> 
 <div id="content-1" class="content">
   <h5>What To Do:</h5>
-  <p>Seek aid for an attorney for the application of your <a href="../glossary.html#doc-1" target="_blank">Affidavit of Loss <i class="elink"></i></a> of your ID.</p>
-
+  <p>For freshmen and transferees, proceed to the Internet Laboratory for your School ID.</p>
+  <h5>Where To Go:</h5>
+  <p>3rd Floor, Building B</p>
+  <h5>What You'll Need:</h5>
+  <ul>
+    <li>Blue Form (Student's Copy of Enrollment)</li>
+    <li>Polo Shirt with collar in any color </li>
+  </ul>
 </div>
 <div id="content-2" class="content">
+  <h5>What To Do:</h5>
+  <p>Seek aid for an attorney for the application of your <a href="../glossary.html#doc-1" target="_blank">Affidavit of Loss <i class="elink"></i></a> of your ID.</p>
+</div>
+<div id="content-3" class="content">
   <h5>What To Do:</h5>
   <p>After securing an Affidavit of Loss, inform Engr. Ronald Tan so he can accommodate you on your renewal of School ID.</p>
   <h5>Where To Go:</h5>
