added header icon for all sections

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
     <!--sidebar starts here-->
     <div class="mobile-sidebar">
       <div class="togglemobile">
-        <span><h4>Dark Theme</h4></span>
+        <span><h4>Dark Mode</h4></span>
         <label class="toggle">
           <input type="checkbox" class="toggledark-btn tgm"><span class="slider"></span>
         </label>
       </div>
       <div class="search">
-        <input class="search-bar" type="text" placeholder="Filter...">
+        <input class="search-bar" type="text" placeholder="Search...">
       </div>
       <ul class="nav-list">
         <li class="list-header doclist"><h4>Forms</h4>
@@ -123,13 +123,13 @@
       </ul>
     </div>
     <div class="toggledesktop">
-      <span><h4>Dark Theme</h4></span>
+      <span><h4>Dark Mode</h4></span>
       <label class="toggle">
         <input type="checkbox" class="toggledark-btn tgd"><span class="slider"></span>
       </label>
     </div>
     <div class="search-desktop">
-      <input class="search-bar" type="text" placeholder="Filter...">
+      <input class="search-bar" type="text" placeholder="Search...">
     </div>
     <div class="desktop-sidebar">
       <ul class="nav-list">
