added new feature: user manual

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
   <body>
     <header class="header">
-      <img id="sidebr" class="sidebar-open">
+      <i id="sidebr" class="sidebar-open"></i>
       <i class="applogo"></i>
       <h3 class="school-name">GARCIA COLLEGE OF TECHNOLOGY</h3>
+      <a class="help-btn" href="user-manual/"><i></i></a>
     </header>
     <div class="header-placeholder"></div> <!--placeholder space below header to prevent clipping of contents with main page-->
     <div class="main-title sbc"><!--big-ass title-->
