--- a/renewal-id/index.html
+++ b/renewal-id/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="main-page">
       <header class="process-header">
-        <a class="back-home" href="../"><img> <h3>School ID</h3> </a>
+        <a class="back-home" href="../"><img> <h3>Home</h3> </a>
         <div class="process-title">
           <h1>SCHOOL I.D.</h1>
         </div>
