--- a/clearance/index.html
+++ b/clearance/index.html
@@ -15,11 +15,10 @@
   <body>
     <div class="main-page">
       <header class="process-header">
-        <a class="back-home" href="../"><img> <h3>Clearance</h3> </a>
+        <a class="back-home" href="../"><img> <h3>Home</h3> </a>
         <div class="process-title">
           <h1>CLEARANCE</h1>
         </div>
-          
       </header>
       <div class="procedure"><h3>Procedure</h3></div>
       <div class="step-container">
