--- a/enrollment/index.html
+++ b/enrollment/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="main-page">
       <header class="process-header" >
-        <a class="back-home" href="../"><img> <h3>Enrollment</h3> </a>
+        <a class="back-home" href="../"><img> <h3>Home</h3> </a>
         <div class="process-title">
           <h1>ENROLLMENT</h1>
         </div>
