updated glossary with images

--- a/index.html
+++ b/index.html
@@ -86,39 +86,39 @@
       <ul class="nav-list">
         <li class="list-header doclist"><h4>Forms</h4>
           <ul class="list-name">
-            <li><a href="glossary.html#doc-1">Affidavit of Loss</a></li>
-            <li><a href="glossary.html#doc-2">Birth Certificate</a></li>
-            <li><a href="glossary.html#doc-3">Blue Form (Student's Copy)</a></li>
-            <li><a href="glossary.html#doc-4">Clearance</a></li>
-            <li><a href="glossary.html#doc-5">Enrollment Form</a></li>
-            <li><a href="glossary.html#doc-6">Examination Permit</a></li>
-            <li><a href="glossary.html#doc-7">Excuse Slip</a></li>
-            <li><a href="glossary.html#doc-8">Final Grades Form</a></li>
-            <li><a href="glossary.html#doc-9">Good Moral Character</a></li>
-            <li><a href="glossary.html#doc-10">Honorable Dismissal</a></li>
-            <li><a href="glossary.html#doc-11">Library Card</a></li>
-            <li><a href="glossary.html#doc-12">School ID</a></li>
-            <li><a href="glossary.html#doc-13">SHS Report Card (Form 138)</a></li>
-            <li><a href="glossary.html#doc-14">Student Information Sheet</a></li>
-            <li><a href="glossary.html#doc-15">Transcript of Records</a></li>
+            <li><a href="glossary/index.html#doc-1">Affidavit of Loss</a></li>
+            <li><a href="glossary/index.html#doc-2">Birth Certificate</a></li>
+            <li><a href="glossary/index.html#doc-3">Blue Form (Student's Copy)</a></li>
+            <li><a href="glossary/index.html#doc-4">Clearance</a></li>
+            <li><a href="glossary/index.html#doc-5">Enrollment Form</a></li>
+            <li><a href="glossary/index.html#doc-6">Examination Permit</a></li>
+            <li><a href="glossary/index.html#doc-7">Excuse Slip</a></li>
+            <li><a href="glossary/index.html#doc-8">Final Grades Form</a></li>
+            <li><a href="glossary/index.html#doc-9">Good Moral Character</a></li>
+            <li><a href="glossary/index.html#doc-10">Honorable Dismissal</a></li>
+            <li><a href="glossary/index.html#doc-11">Library Card</a></li>
+            <li><a href="glossary/index.html#doc-12">School ID</a></li>
+            <li><a href="glossary/index.html#doc-13">SHS Report Card (Form 138)</a></li>
+            <li><a href="glossary/index.html#doc-14">Student Information Sheet</a></li>
+            <li><a href="glossary/index.html#doc-15">Transcript of Records</a></li>
           </ul>
         </li>
         <li class="list-header loclist"><h4>Buildings and Offices</h4>
           <ul class="list-name">
-            <li><a href="glossary.html#loc-1">Assessor's Office</a></li>
-            <li><a href="glossary.html#loc-2">Building A</a></li>
-            <li><a href="glossary.html#loc-3">Building B</a></li>
-            <li><a href="glossary.html#loc-4">Building C</a></li>
-            <li><a href="glossary.html#loc-5">Building D</a></li>
-            <li><a href="glossary.html#loc-6">EVP Office</a></li>
-            <li><a href="glossary.html#loc-7">Guidance Office</a></li>
-            <li><a href="glossary.html#loc-8">HAC's Office</a></li>
-            <li><a href="glossary.html#loc-9">Internet Laboratory</a></li>
-            <li><a href="glossary.html#loc-10">Library</a></li>
-            <li><a href="glossary.html#loc-11">Registrar's Office</a></li>
-            <li><a href="glossary.html#loc-12">SaaS Office</a></li>
-            <li><a href="glossary.html#loc-13">SSC Office</a></li>
-            <li><a href="glossary.html#loc-14">Treasurer's Office</a></li>
+            <li><a href="glossary/index.html#loc-1">Assessor's Office</a></li>
+            <li><a href="glossary/index.html#loc-2">Building A</a></li>
+            <li><a href="glossary/index.html#loc-3">Building B</a></li>
+            <li><a href="glossary/index.html#loc-4">Building C</a></li>
+            <li><a href="glossary/index.html#loc-5">Building D</a></li>
+            <li><a href="glossary/index.html#loc-6">EVP Office</a></li>
+            <li><a href="glossary/index.html#loc-7">Guidance Office</a></li>
+            <li><a href="glossary/index.html#loc-8">HAC's Office</a></li>
+            <li><a href="glossary/index.html#loc-9">Internet Laboratory</a></li>
+            <li><a href="glossary/index.html#loc-10">Library</a></li>
+            <li><a href="glossary/index.html#loc-11">Registrar's Office</a></li>
+            <li><a href="glossary/index.html#loc-12">SaaS Office</a></li>
+            <li><a href="glossary/index.html#loc-13">SSC Office</a></li>
+            <li><a href="glossary/index.html#loc-14">Treasurer's Office</a></li>
           </ul>
         </li>
       </ul>
@@ -136,39 +136,39 @@
       <ul class="nav-list">
         <li class="list-header doclist"><h4>Forms</h4>
           <ul class="list-name">
-            <li><a href="glossary.html#doc-1">Affidavit of Loss</a></li>
-            <li><a href="glossary.html#doc-2">Birth Certificate</a></li>
-            <li><a href="glossary.html#doc-3">Blue Form (Student's Copy)</a></li>
-            <li><a href="glossary.html#doc-4">Clearance</a></li>
-            <li><a href="glossary.html#doc-5">Enrollment Form</a></li>
-            <li><a href="glossary.html#doc-6">Examination Permit</a></li>  
-            <li><a href="glossary.html#doc-7">Excuse Slip</a></li>
-            <li><a href="glossary.html#doc-8">Final Grades Form</a></li>
-            <li><a href="glossary.html#doc-9">Good Moral Character</a></li>
-            <li><a href="glossary.html#doc-10">Honorable Dismissal</a></li>
-            <li><a href="glossary.html#doc-11">Library Card</a></li>
-            <li><a href="glossary.html#doc-12">School ID</a></li>
-            <li><a href="glossary.html#doc-13">SHS Report Card (Form 138)</a></li>
-            <li><a href="glossary.html#doc-14">Student Information Sheet</a></li>
-            <li><a href="glossary.html#doc-15">Transcript of Records</a></li>
+            <li><a href="glossary/index.html#doc-1">Affidavit of Loss</a></li>
+            <li><a href="glossary/index.html#doc-2">Birth Certificate</a></li>
+            <li><a href="glossary/index.html#doc-3">Blue Form (Student's Copy)</a></li>
+            <li><a href="glossary/index.html#doc-4">Clearance</a></li>
+            <li><a href="glossary/index.html#doc-5">Enrollment Form</a></li>
+            <li><a href="glossary/index.html#doc-6">Examination Permit</a></li>  
+            <li><a href="glossary/index.html#doc-7">Excuse Slip</a></li>
+            <li><a href="glossary/index.html#doc-8">Final Grades Form</a></li>
+            <li><a href="glossary/index.html#doc-9">Good Moral Character</a></li>
+            <li><a href="glossary/index.html#doc-10">Honorable Dismissal</a></li>
+            <li><a href="glossary/index.html#doc-11">Library Card</a></li>
+            <li><a href="glossary/index.html#doc-12">School ID</a></li>
+            <li><a href="glossary/index.html#doc-13">SHS Report Card (Form 138)</a></li>
+            <li><a href="glossary/index.html#doc-14">Student Information Sheet</a></li>
+            <li><a href="glossary/index.html#doc-15">Transcript of Records</a></li>
           </ul>
         </li>
         <li class="list-header loclist"><h4>Buildings and Offices</h4>
           <ul class="list-name">
-            <li><a href="glossary.html#loc-1">Assessor's Office</a></li>
-            <li><a href="glossary.html#loc-2">Building A</a></li>
-            <li><a href="glossary.html#loc-3">Building B</a></li>
-            <li><a href="glossary.html#loc-4">Building C</a></li>
-            <li><a href="glossary.html#loc-5">Building D</a></li>
-            <li><a href="glossary.html#loc-6">EVP Office</a></li>
-            <li><a href="glossary.html#loc-7">Guidance Office</a></li>
-            <li><a href="glossary.html#loc-8">HAC's Office</a></li>
-            <li><a href="glossary.html#loc-9">Internet Laboratory</a></li>
-            <li><a href="glossary.html#loc-10">Library</a></li>
-            <li><a href="glossary.html#loc-11">Registrar's Office</a></li>
-            <li><a href="glossary.html#loc-12">SaaS Office</a></li>
-            <li><a href="glossary.html#loc-13">SSC Office</a></li>
-            <li><a href="glossary.html#loc-14">Treasurer's Office</a></li>
+            <li><a href="glossary/index.html#loc-1">Assessor's Office</a></li>
+            <li><a href="glossary/index.html#loc-2">Building A</a></li>
+            <li><a href="glossary/index.html#loc-3">Building B</a></li>
+            <li><a href="glossary/index.html#loc-4">Building C</a></li>
+            <li><a href="glossary/index.html#loc-5">Building D</a></li>
+            <li><a href="glossary/index.html#loc-6">EVP Office</a></li>
+            <li><a href="glossary/index.html#loc-7">Guidance Office</a></li>
+            <li><a href="glossary/index.html#loc-8">HAC's Office</a></li>
+            <li><a href="glossary/index.html#loc-9">Internet Laboratory</a></li>
+            <li><a href="glossary/index.html#loc-10">Library</a></li>
+            <li><a href="glossary/index.html#loc-11">Registrar's Office</a></li>
+            <li><a href="glossary/index.html#loc-12">SaaS Office</a></li>
+            <li><a href="glossary/index.html#loc-13">SSC Office</a></li>
+            <li><a href="glossary/index.html#loc-14">Treasurer's Office</a></li>
           </ul>
         </li>
       </ul>
